[gd_scene load_steps=9 format=3 uid="uid://b2301auif72gf"]

[ext_resource type="Texture2D" uid="uid://dxfuuw3up7vdp" path="res://Sprites/Big Asteroid 2.png" id="1_ib8wo"]
[ext_resource type="Script" uid="uid://qjtjh3jtgas0" path="res://big_asteroid.gd" id="1_rgbiv"]
[ext_resource type="Texture2D" uid="uid://bo2it7j2u58u7" path="res://Sprites/Big Asteroid 3.png" id="2_rgbiv"]
[ext_resource type="Texture2D" uid="uid://uqn48tcxjy8s" path="res://Sprites/Big Asteroid 4.png" id="3_aj1y6"]
[ext_resource type="Texture2D" uid="uid://e1dfhl0ud5l" path="res://Sprites/Big Asteroid 5.png" id="4_jimkv"]
[ext_resource type="Texture2D" uid="uid://dqocg2gqnqc2q" path="res://Sprites/Big Asteroid 1.png" id="5_xnw8q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_crhyp"]
radius = 33.0

[sub_resource type="SpriteFrames" id="SpriteFrames_lvpsd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ib8wo")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rgbiv")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_aj1y6")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_jimkv")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xnw8q")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[node name="BigAsteroid" type="RigidBody2D" groups=["asteroids"]]
collision_layer = 5
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_rgbiv")

[node name="BigAsteroidCollison" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_crhyp")

[node name="BigAsteroidSprites" type="AnimatedSprite2D" parent="."]
position = Vector2(0.799997, -0.80000156)
scale = Vector2(0.30624998, 0.30624998)
sprite_frames = SubResource("SpriteFrames_lvpsd")
animation = &"5"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
